0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_generic_read.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_generic_read.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py:


Reading datasets
================

In this example, we show the use of the generic `read` method to create dataset
either from local or remote files.

.. GENERATED FROM PYTHON SOURCE LINES 16-17

First we need to import the spectrochempy API package

.. GENERATED FROM PYTHON SOURCE LINES 17-19

.. code-block:: Python

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 20-24

Import dataset from local files
-------------------------------
Read a IR data recorded in Omnic format (``.spg`` extension).
We just pass the file name as parameter.

.. GENERATED FROM PYTHON SOURCE LINES 24-27

.. code-block:: Python

    dataset = scp.read("irdata/nh4y-activation.spg")
    dataset






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>NDDataset: [float64] a.u. (shape: (y:55, x:5549))[nh4y-activation]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> nh4y-activation</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@fv-az1696-90</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-09 01:14:09+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Omnic title: NH4Y-activation.SPG<br/>               Omnic filename: /home/runner/.spectrochempy/testdata/irdata/nh4y-activation.spg</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-09 01:14:09+00:00> Imported from spg file /home/runner/.spectrochempy/testdata/irdata/nh4y-activation.spg.<br/>               2025-03-09 01:14:09+00:00> Sorted by date</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> absorbance</div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[   2.057    2.061 ...    2.013    2.012]<br/>          [   2.033    2.037 ...    1.913    1.911]<br/>          ...<br/>          [   1.794    1.791 ...    1.198    1.198]<br/>          [   1.816    1.815 ...     1.24    1.238]] a.u.</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:55, x:5549)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 5549</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> wavenumbers</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    6000     5999 ...    650.9    649.9] cm⁻¹</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 55</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> acquisition timestamp (GMT)</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[1.468e+09 1.468e+09 ... 1.468e+09 1.468e+09] s</div></div></div>
    <div class="scp-output section"><div class="attr-name">       labels</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='label'>         [[  2016-07-06 19:03:14+00:00   2016-07-06 19:13:14+00:00 ...   2016-07-07 04:03:17+00:00   2016-07-07 04:13:17+00:00]<br/>          [  vz0466.spa, Wed Jul 06 21:00:38 2016 (GMT+02:00)   vz0467.spa, Wed Jul 06 21:10:38 2016 (GMT+02:00) ...<br/>             vz0520.spa, Thu Jul 07 06:00:41 2016 (GMT+02:00)   vz0521.spa, Thu Jul 07 06:10:41 2016 (GMT+02:00)]]</div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 28-29

.. code-block:: Python

    dataset.plot(style="paper")



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_001.png
   :alt: plot generic read
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_001.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 30-31

When using `read`, we can pass filename as a `str` or a `~pathlib.Path` object.

.. GENERATED FROM PYTHON SOURCE LINES 31-36

.. code-block:: Python

    from pathlib import Path

    filename = Path("irdata/nh4y-activation.spg")
    dataset = scp.read(filename)








.. GENERATED FROM PYTHON SOURCE LINES 37-39

Note that is the file is not found in the current working directory, `SpectroChemPy`
will try to find it in the ``datadir`` directory defined in `preferences` :

.. GENERATED FROM PYTHON SOURCE LINES 39-42

.. code-block:: Python

    datadir = scp.preferences.datadir
    datadir





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    PosixPath('/home/runner/.spectrochempy/testdata')



.. GENERATED FROM PYTHON SOURCE LINES 43-48

If the supplied argument is a directory, then the whole directory is read at once.
By default, the different files will be merged along the first dimension (y).
However, for this to work, the second dimension (x) must be compatible (same size)
or else a WARNING appears. To avoid the warning and get individual spectra, you can
set ``merge`` to `False` .

.. GENERATED FROM PYTHON SOURCE LINES 48-51

.. code-block:: Python

    dataset_list = scp.read("irdata", merge=False)
    dataset_list






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>List (len=3, type=NDDataset)</summary><ul><div class='scp-output section'><div class='scp-output'><details><summary>0: NDDataset: [float64] a.u. (shape: (y:19, x:3112))[CO@Mo_Al2O3]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> CO@Mo_Al2O3</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@fv-az1696-90</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-09 01:14:09+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Omnic title: Group sust Mo_Al2O3_base line.SPG<br/>               Omnic filename: /home/runner/.spectrochempy/testdata/irdata/CO@Mo_Al2O3.SPG</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-09 01:14:09+00:00> Imported from spg file /home/runner/.spectrochempy/testdata/irdata/CO@Mo_Al2O3.SPG.<br/>               2025-03-09 01:14:09+00:00> Sorted by date</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> absorbance</div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[0.0008032 3.788e-05 ... 0.0003027 0.0003745]<br/>          [-3.608e-05 -0.0001981 ... 0.0003089  0.00117]<br/>          ...<br/>          [0.0008357 -0.0001387 ... -0.0005221 -0.001121]<br/>          [0.0005655 -0.000116 ... -0.00057 -0.0006307]] a.u.</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:19, x:3112)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 3112</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> wavenumbers</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    4000     3999 ...     1001    999.9] cm⁻¹</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 19</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> acquisition timestamp (GMT)</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[1.477e+09 1.477e+09 ... 1.477e+09 1.477e+09] s</div></div></div>
    <div class="scp-output section"><div class="attr-name">       labels</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='label'>         [[  2016-10-18 13:49:35+00:00   2016-10-18 13:54:06+00:00 ...   2016-10-18 16:01:33+00:00   2016-10-18 16:06:37+00:00]<br/>          [  *Résultat de Soustraction:04_Mo_Al2O3_calc_0.003torr_LT_after sulf_Oct 18 15:46:42 2016 (GMT+02:00)<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_0.004torr_LT_after sulf_Oct 18 15:51:12 2016 (GMT+02:00) ...<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_0.905torr_LT_after sulf_Oct 18 17:58:42 2016 (GMT+02:00)<br/>             *Résultat de Soustraction:04_Mo_Al2O3_calc_1.004torr_LT_after sulf_Oct 18 18:03:41 2016 (GMT+02:00)]]</div></details></div></details></div></div>
    <div class='scp-output section'><div class='scp-output'><details><summary>1: NDDataset: [float64] a.u. (shape: (y:55, x:5549))[nh4y-activation]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> nh4y-activation</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@fv-az1696-90</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-09 01:14:09+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Omnic title: NH4Y-activation.SPG<br/>               Omnic filename: /home/runner/.spectrochempy/testdata/irdata/nh4y-activation.spg</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-09 01:14:09+00:00> Imported from spg file /home/runner/.spectrochempy/testdata/irdata/nh4y-activation.spg.<br/>               2025-03-09 01:14:09+00:00> Sorted by date</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> absorbance</div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[   2.057    2.061 ...    2.013    2.012]<br/>          [   2.033    2.037 ...    1.913    1.911]<br/>          ...<br/>          [   1.794    1.791 ...    1.198    1.198]<br/>          [   1.816    1.815 ...     1.24    1.238]] a.u.</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:55, x:5549)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 5549</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> wavenumbers</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    6000     5999 ...    650.9    649.9] cm⁻¹</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 55</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> acquisition timestamp (GMT)</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[1.468e+09 1.468e+09 ... 1.468e+09 1.468e+09] s</div></div></div>
    <div class="scp-output section"><div class="attr-name">       labels</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='label'>         [[  2016-07-06 19:03:14+00:00   2016-07-06 19:13:14+00:00 ...   2016-07-07 04:03:17+00:00   2016-07-07 04:13:17+00:00]<br/>          [  vz0466.spa, Wed Jul 06 21:00:38 2016 (GMT+02:00)   vz0467.spa, Wed Jul 06 21:10:38 2016 (GMT+02:00) ...<br/>             vz0520.spa, Thu Jul 07 06:00:41 2016 (GMT+02:00)   vz0521.spa, Thu Jul 07 06:10:41 2016 (GMT+02:00)]]</div></details></div></details></div></div>
    <div class='scp-output section'><div class='scp-output'><details><summary>2: NDDataset: [float64] unitless (shape: (y:1, x:3736))[IR]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> IR</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@fv-az1696-90</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-09 01:14:09+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>"name" read from .csv file</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-09 01:14:09+00:00> Read from .csv file</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[-0.09079    3.547 ...    4.317 -0.09079]]</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:1, x:3736)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 3736</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[   399.2    400.2 ...     4000     4001]</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 1</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       0]</div></div></div></details></div></details></div></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 52-54

to get full details on the parameters that can be used, look at the API documentation:
`spectrochempy.read` .

.. GENERATED FROM PYTHON SOURCE LINES 56-59

Import dataset from remote files
--------------------------------
To download and read file from remote server you can use urls.

.. GENERATED FROM PYTHON SOURCE LINES 59-60

.. code-block:: Python

    dataset_list = scp.read("http://www.eigenvector.com/data/Corn/corn.mat")







.. GENERATED FROM PYTHON SOURCE LINES 61-63

In this case the matlab data contains 7 arrays that have been automatically
transformed to `NDDataset` .

.. GENERATED FROM PYTHON SOURCE LINES 63-66

.. code-block:: Python

    for nd in dataset_list:
        print(f"{nd.name} : {nd.shape}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    mp6spec : (240, 700)
    m5nbs : (3, 700)
    mp6nbs : (8, 700)
    propvals : (80, 4)




.. GENERATED FROM PYTHON SOURCE LINES 67-71

The `eigenvector.com <eigenvector.com>`__ website contains the same data in a
compressed (zipped) format:
`corn.mat_.zip <https://eigenvector.com/wp-content/uploads/2019/06/corn.mat_.zip>`__ .
This can also be used by the `read` method.

.. GENERATED FROM PYTHON SOURCE LINES 71-76

.. code-block:: Python

    dataset_list = scp.read(
        "https://eigenvector.com/wp-content/uploads/2019/06/corn.mat_.zip"
    )
    dataset_list






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>List (len=4, type=NDDataset)</summary><ul><div class='scp-output section'><div class='scp-output'><details><summary>0: NDDataset: [float64] unitless (shape: (y:240, x:700))[mp6spec]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> mp6spec</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> *unknown*</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-09 01:14:11+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Concatenation of 3  datasets:<br/>               ( m5spec, mp5spec, mp6spec )</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-09 01:14:11+00:00> Created by concatenate<br/>               2025-03-09 01:14:11+00:00> Merged from several files</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[ 0.04449  0.04438 ...   0.7309   0.7306]<br/>          [-0.01244 -0.01251 ...   0.6849   0.6844]<br/>          ...<br/>          [-0.003701 -0.003818 ...   0.7128   0.7121]<br/>          [-0.01526 -0.01538 ...   0.7028   0.7021]]</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:240, x:700)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 700</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    1100     1102 ...     2496     2498]</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 240</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> index</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       0        0 ...       79       79]</div></div></div></details></div></details></div></div>
    <div class='scp-output section'><div class='scp-output'><details><summary>1: NDDataset: [float64] unitless (shape: (y:3, x:700))[m5nbs]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> m5nbs</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> *unknown*</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-09 01:14:11+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Concatenation of 1  datasets:<br/>               ( m5nbs )</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-09 01:14:11+00:00> Created by concatenate<br/>               2025-03-09 01:14:11+00:00> Merged from several files</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[   0.134    0.132 ...  0.09665  0.09771]<br/>          [  0.1374   0.1354 ...  0.09898  0.09999]<br/>          [  0.1437   0.1416 ...   0.1037   0.1048]]</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:3, x:700)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 700</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    1100     1102 ...     2496     2498]</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 3</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> index</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       0        1        2]</div></div></div></details></div></details></div></div>
    <div class='scp-output section'><div class='scp-output'><details><summary>2: NDDataset: [float64] unitless (shape: (y:8, x:700))[mp6nbs]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> mp6nbs</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> *unknown*</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-09 01:14:11+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Concatenation of 2  datasets:<br/>               ( mp5nbs, mp6nbs )</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-09 01:14:11+00:00> Created by concatenate<br/>               2025-03-09 01:14:11+00:00> Merged from several files</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[ 0.06679   0.0645 ...  0.03636  0.03724]<br/>          [ 0.05404   0.0524 ...  0.02147  0.02236]<br/>          ...<br/>          [ 0.06115  0.05901 ...  0.03013  0.03099]<br/>          [ 0.05311  0.05144 ...  0.02195  0.02284]]</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:8, x:700)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 700</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    1100     1102 ...     2496     2498]</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 8</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> index</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       0        0 ...        3        3]</div></div></div></details></div></details></div></div>
    <div class='scp-output section'><div class='scp-output'><details><summary>3: NDDataset: [float64] unitless (shape: (y:80, x:4))[propvals]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> propvals</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> *unknown*</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-09 01:14:11+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Concatenation of 1  datasets:<br/>               ( propvals )</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-09 01:14:11+00:00> Created by concatenate<br/>               2025-03-09 01:14:11+00:00> Merged from several files</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[   10.45    3.687    8.746    64.84]<br/>          [   10.41     3.72    8.658    64.85]<br/>          ...<br/>          [   10.59    3.176    8.132    65.21]<br/>          [   10.98    3.328    8.428    64.85]]</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:80, x:4)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 4</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> <untitled></div></div>
    <div class="scp-output section"><div class="attr-name">       labels</div><div>:</div><div class="attr-value"> <div class='label'>[  Moisture   Oil        Protein    Starch  ]</div> </div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 80</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> index</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[       0        1 ...       78       79]</div></div></div></details></div></details></div></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 77-78

Plot each of the datasets

.. GENERATED FROM PYTHON SOURCE LINES 78-83

.. code-block:: Python

    dataset_list[-1].plot()
    dataset_list[-2].plot()
    dataset_list[-3].plot()
    dataset_list[-4].plot()




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_002.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_002.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_003.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_004.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_004.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_005.png
         :alt: plot generic read
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_generic_read_005.png
         :class: sphx-glr-multi-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 84-86

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 86-88

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 3.277 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_generic_read.ipynb <plot_generic_read.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_generic_read.py <plot_generic_read.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_generic_read.zip <plot_generic_read.zip>`
